@@ -1,3 +1,8 @@
+2010-05-11  Jean-Sébastien Pédron  <jean-sebastien@yakaz.com>
+
+	* src/Makefile.am: Fix Emakefile generation by only selecting modules,
+	eg. no headers.
+
 2010-05-10  Jean-Sébastien Pédron  <jean-sebastien@yakaz.com>
 
 	* configure.ac: Bash doesn't like an "if"-block with no instructions
